--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 //    compile("io.rest-assured:rest-assured:4.3.1")
 //    compile("com.fasterxml.jackson.core:jackson-databind:2.11.2")
 //
-//    compile("com.codeborne:selenide:5.13.1")
+    compile("com.codeborne:selenide:5.13.1")
     compile("org.junit.jupiter:junit-jupiter-api:5.6.2")
     compile("org.junit.jupiter:junit-jupiter-engine:5.6.2")
     compile("org.junit.jupiter:junit-jupiter-params:5.6.2")
