--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,6 @@ tasks.withType(Test) {
 
 task tests(type: Test) {
     useJUnitPlatform {
-//        includeTags 'tests'
+        includeTags 'tests'
     }
 }
